[tool.poetry]
name = "pb"
version = "0.1.0"
description = "Mock of the Protocol Builder at UVA so we can test."
authors = ["Dan <dan@sartography.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "==2.2.5"
connexion = {extras = [ "swagger-ui", "flask" ], version = "~=2.14.1"}
gevent = "23.*.*"
flask-wtf = "1.*.*"
sqlalchemy = "<2"
flask-sqlalchemy = "2.*.*"
flask-assets = "2.*.*"
flask-table = "0.*.*"
flask-migrate = "3.*.*"
flask-marshmallow = "==0.14.0"
ldap3 = "2.*.*"
ma = "1.*.*"
marshmallow-sqlalchemy = "0.*.*"
wtforms-alchemy = "0.*.*"
psycopg2-binary = "2.9.*"
pyscss = "1.*.*"
gunicorn = "20.*.*"
werkzeug = "~=2.2.2"
flask-cors = "3.*.*"

[tool.poetry.group.dev.dependencies]
pbr = "5.*.*"
coverage = "6.*.*"
pytest = "7.*.*"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
